// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button primary 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
        "paddingBottom": 15,
        "paddingTop": 2,
      }
    }
  >
    <h2
      data-radium={true}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.6)",
          "fontSize": 20,
          "fontWeight": 200,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      Kleros UI-Kit
    </h2>
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <div
          className="Button "
          onClick={[Function]}
        >
          <h4
            className="Button-label"
          >
            CLICK ME
          </h4>
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with lots of text 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
        "paddingBottom": 15,
        "paddingTop": 2,
      }
    }
  >
    <h2
      data-radium={true}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.6)",
          "fontSize": 20,
          "fontWeight": 200,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      Kleros UI-Kit
    </h2>
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <div
          className="Button "
          onClick={[Function]}
        >
          <h4
            className="Button-label"
          >
            CLICK ME, CLICK ME, CLICK ME
          </h4>
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Identicon with placeholder seed 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
        "paddingBottom": 15,
        "paddingTop": 2,
      }
    }
  >
    <h2
      data-radium={true}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.6)",
          "fontSize": 20,
          "fontWeight": 200,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      Kleros UI-Kit
    </h2>
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <div>
          [Blockies]
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RequiresMetaMask needs unlock 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
        "paddingBottom": 15,
        "paddingTop": 2,
      }
    }
  >
    <h2
      data-radium={true}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.6)",
          "fontSize": 20,
          "fontWeight": 200,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      Kleros UI-Kit
    </h2>
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <div
          className="RequiresMetaMask"
        >
          <div
            className="RequiresMetaMask-message"
          >
            <span>
              This is a decentralized application. In order to use this site please
               
            </span>
            unlock 
            <a
              className="RequiresMetaMask-message-link"
              href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=en"
            >
              MetaMask
            </a>
          </div>
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RequiresMetaMask not found 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
        "paddingBottom": 15,
        "paddingTop": 2,
      }
    }
  >
    <h2
      data-radium={true}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.6)",
          "fontSize": 20,
          "fontWeight": 200,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      Kleros UI-Kit
    </h2>
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <div
          className="RequiresMetaMask"
        >
          <div
            className="RequiresMetaMask-message"
          >
            <span>
              This is a decentralized application. In order to use this site please
               
            </span>
            download 
            <a
              className="RequiresMetaMask-message-link"
              href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=en"
            >
              MetaMask
            </a>
          </div>
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextInput default 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
        "marginLeft": 15,
        "marginRight": 15,
        "marginTop": 15,
        "paddingBottom": 15,
        "paddingTop": 2,
      }
    }
  >
    <h2
      data-radium={true}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.6)",
          "fontSize": 20,
          "fontWeight": 200,
          "margin": 0,
          "padding": 0,
        }
      }
    >
      Kleros UI-Kit
    </h2>
  </div>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <div
          className="TextInput"
        >
          <input
            className="input"
            onChange={[Function]}
            placeholder="Enter something"
            type="text"
            value={undefined}
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
